--- a/package.json
+++ b/package.json
@@ -20,9 +20,6 @@
     "cenit-io", "SpreadsheetConverter"
   ],
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "request": "^2.79.0",
-    "underscore": "^1.8.3",
-    "utils": "^0.3.1"
+    "request": "^2.79.0"
   }
 }
