--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
   },
   "homepage": "https://github.com/cenit-io/cenit-spreadsheet-converter",
   "keywords": [
-    "cenit-io", "SpreadsheetConverter"
+    "cenit-io",
+    "SpreadsheetConverter"
   ],
+  "scripts": {
+    "postinstall": "node postinstall.js"
+  },
   "dependencies": {
-    "request": "^2.79.0"
+    "cpx": "^1.5.0",
+    "inflection": "^1.12.0",
+    "request": "^2.81.0"
   }
 }
